--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/OguzhanUmutlu/RealTimePoll#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "request": "^2.88.2"
